crates/strider-analyze/tests/snapshots/v3__x64__floats__int_to_float.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nXMM1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "7" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0xffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="ZeroExtend\nu32 → u128", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "10" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="IntToFloat\nu32 → f32", shape=box, fillcolor="#302018"];
  "11" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nEDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nRDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="init\nRAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
